--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/platform-express": "^11.1.8",
     "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "^6.19.0",
+    "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
+    "nanoid": "^5.1.6",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.2.2",
