--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "nanoid": "^5.1.6",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
