feat: analytics queries + deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,50 @@
+# services:
+#   postgres:
+#     image: postgres:16
+#     environment:
+#       POSTGRES_PASSWORD: postgres
+#       POSTGRES_DB: analytics
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       - pgdata:/var/lib/postgresql/data
+
+#   redis:
+#     image: redis:7
+#     ports:
+#       - "6379:6379"
+#     command: ["redis-server", "--appendonly", "yes"]
+#     healthcheck:
+#       test: ["CMD", "redis-cli", "ping"]
+#       interval: 5s
+#       timeout: 3s
+#       retries: 10
+# volumes:
+#   pgdata:
+
+
 services:
+  api:
+    build: .
+    env_file: .env
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+      - redis
   postgres:
     image: postgres:16
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: analytics
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-
+    ports:
+      - "5432:5432"
   redis:
-    image: redis:7
+    image: redis:7-alpine
     ports:
       - "6379:6379"
-    command: ["redis-server", "--appendonly", "yes"]
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
 volumes:
   pgdata:
