--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/src/main.js",
+    "start:prod:db": "prisma migrate deploy && node dist/src/main.js",
     "start:pretty": "node -r pino-pretty dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
